# gridflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/rules/: subagent-instructions.md
.claude/skills/architecture-doc-creator/: SKILL.md
.claude/skills/create-design-doc/: SKILL.md
.github/workflows/: ci.yml
docker/gridflow-core/: Dockerfile
docker/opendss-connector/: Dockerfile
docker/pandapower-connector/: Dockerfile
docs/: architecture_document_plan.md  basic_design_plan.md  dataset_catalog.md  dataset_contribution.md  dataset_registration_guide.md  detailed_design_plan.md  development_plan.md  gridtwin_lab_plan.md  mvp_problem_candidates.md  mvp_review_policy.md  mvp_scenario.md  mvp_scenario_v2.md  mvp_standard_workflow.md  phase0_result.md  phase1_result.md  phase2_result.md  research_landscape.md
docs/architecture/: 01_introduction.md  02_architecture_significance.md  03_static_view.md  03b_mechanisms.md  04_dynamic_view.md  05_view_mapping.md  06_architecture_evaluation.md  07_adr.md  08_appendix.md  09_review_record.md  README.md
docs/basic_design/: 01_requirements.md  02_system_architecture.md  03_function_design.md  04_cli_design.md  05_data_design.md  06_external_interface.md  07_performance.md  08_reliability.md  09_security.md  10_deployment.md  11_test_policy.md  12_operation.md  README.md  appendix.md  review_record.md
docs/detailed_design/: 01_requirements.md  02_module_structure.md  03_class_design.md  03a_domain_classes.md  03b_usecase_classes.md  03c_adapter_classes.md  03d_infra_classes.md  03e_usecase_results.md  04_process_flow.md  05_state_transition.md  06_data_detail.md  07_algorithm.md  08_error_design.md  09_config_management.md  10_test_detail.md  11_build_deploy.md  README.md  WORK_INSTRUCTIONS.md  appendix.md  review_record.md
docs/detailed_design/work_instructions/: REVIEW_LOG.md  WI-00_common.md  WI-01_ch3_latter.md  WI-02_ch4_first.md  WI-03_ch4_latter.md  WI-04_ch5.md  WI-05_ch7.md  WI-06_ch10.md  WI-07_ch11.md  WI-08_appendix.md  WI-R1_review.md  WI-R2_cross_review.md
examples/cdl_minimal/: network.yaml  pack.yaml
examples/ieee13/: IEEE13Nodeckt.dss  pack.yaml
examples/minimal_feeder/: minimal.dss  pack.yaml
src/gridflow/: __init__.py  __main__.py  main.py
src/gridflow/adapter/: __init__.py
src/gridflow/connectors/: __init__.py  _daemon_base.py  opendss.py  pandapower.py
src/gridflow/domain/: __init__.py  error.py
src/gridflow/infra/: __init__.py  config.py  container_manager.py  health_server.py  logging.py  orchestrator.py
src/gridflow/usecase/: __init__.py  control.py  cross_validation.py  evaluation.py  evaluation_yaml_loader.py  execution_plan.py  interfaces.py  orchestrator.py  result.py  sensitivity.py  sweep.py  sweep_plan.py  sweep_yaml_loader.py  violation_attribution.py
test/_template/: eval_plan.yaml  report.md  review_record.md  sweep_plan.yaml
test/mvp_try1/: README.md  report.md
test/mvp_try1/packs/: der_00.dss  der_00.yaml  der_100.dss  der_100.yaml  der_25.dss  der_25.yaml  der_50.dss  der_50.yaml  der_75.dss  der_75.yaml  ieee13_der_base.dss
test/mvp_try1/results/: benchmark_00_vs_100.json  (+15 more)
test/mvp_try10/: README.md  depth_chain.md  depth_framework.md  ideation_record.md  ideation_record_v2.md  report.md  review_record.md
test/mvp_try11/: NEXT_STEPS.md  ideation_record.md  implementation_plan.md  report.md  review_record.md  theorems.md
test/mvp_try12/: ideation_record.md  implementation_plan.md  report.md  review_record.md  theorems.md
test/mvp_try13/: ideation_record.md  implementation_plan.md  report.md  review_record.md
test/mvp_try14/: ideation_record.md  report.md  review_record.md
test/mvp_try15/: ideation_record.md  implementation_plan.md  report.md  review_record.md  theorems.md
test/mvp_try16/: ideation_record.md  independent_review_record.md  report.md  review_record.md  theorems.md
test/mvp_try17/: ideation_record.md  novelty_attempt.md  report.md  review_record.md
test/mvp_try2/: README.md  report.md  review_record.md
test/mvp_try3/: README.md  report.md  review_record.md
test/mvp_try4/: README.md  report.md  review_record.md
test/mvp_try5/: README.md  report.md  review_record.md
test/mvp_try6/: README.md  report.md  review_record.md
test/mvp_try7/: README.md  report.md  review_record.md
test/mvp_try8/: .gitignore  README.md  report.md  review_record.md
test/mvp_try9/: README.md  ideation_record.md  report.md  review_record.md
tests/dataset/: test_scenario_bridge.py  test_stub_loaders.py  test_synthetic_loader.py
tests/e2e/: test_cli_end_to_end.py  test_opendss_e2e.py
tests/spike/: test_control_opendss.py  test_opendss_smoke.py
tests/unit/: test_templates.py
(+338 files in other folders)
