[project]
name = "gridflow"
version = "0.1.0"
description = "Grid simulation and power flow analysis framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "gridflow team" },
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "numpy>=1.26,<2.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0,<25.0",
    "typer>=0.12,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
opendss = [
    "OpenDSSDirect.py>=0.9,<1.0",
]
pandapower = [
    "pandapower>=2.13,<4.0",
]

[project.scripts]
gridflow = "gridflow.adapter.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4,<1.0",
    "pre-commit>=3.0,<4.0",
    "types-PyYAML>=6.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridflow"]

# ---- Ruff settings ----
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["gridflow"]

# ---- mypy settings ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["opendssdirect"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandapower", "pandapower.*"]
ignore_missing_imports = true

# typer does not ship py.typed / type stubs. suppress import-not-found
# for environments where typer is not installed in the type-checker venv.
[[tool.mypy.overrides]]
module = ["typer", "typer.*"]
ignore_missing_imports = true

# httpx is a core dep but may not have stubs in all environments.
[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true

# structlog ships py.typed in recent versions but older releases
# may not; guard against CI runner variance.
[[tool.mypy.overrides]]
module = ["structlog", "structlog.*"]
ignore_missing_imports = true

# yaml stubs are provided by types-PyYAML (dev dep). In minimal envs
# where types-PyYAML is not installed, suppress the untyped import.
[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

# ---- pytest settings ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "spike: marks spike/exploration tests",
]
